/**
 * Copyright (c) 2022 Peking University and Peking University Institute for Computing and Digital Economy
 * SCOW is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *          http://license.coscl.org.cn/MulanPSL2
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
 * EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
 * MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */

syntax = "proto3";

package scow_notification;

import "protos/common.proto";
import "protos/message_type.proto";
import "google/protobuf/struct.proto";

message Message {
  uint64 id = 1;
  MessageType message_type = 2;
  google.protobuf.Struct metadata = 3;
  repeated string descriptions = 4;
  string created_at = 5;
  string updated_at = 6;
}

message SendMessageRequest {
  SenderType sender_type = 1;
  string sender_id = 2;
  TargetType target_type = 3;
  repeated string target_ids = 4;
  string message_type = 5;
  google.protobuf.Struct metadata = 6;
  repeated string description_data = 7;
  optional MessageType message_type_template = 8;
}

message SendMessageResponse {
  Message message =  1;
}

message ListMessagesRequest {
  string user_id = 1;
  optional string message_type = 2;
  NoticeType notice_type = 3;
  optional ReadStatus read_status = 4;
  optional uint32 page = 5;
  optional uint32 pageSize = 6;
}

message ListMessagesResponse {
  uint64 total_count = 1;
  repeated Message messages = 2;
}

message GetUnreadMessagesRequest {
  string user_id = 1;
  NoticeType notice_type = 2;
}

message GetUnreadMessagesResponse {
  uint64 total_count = 1;
  repeated Message messages = 2;
}

message MakeMessageReadRequest {
  string user_id = 1;
  uint64 message_id = 2;
}

message MakeMessageReadResponse {
}


service MessageService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);

  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse);

  rpc GetUnreadMessages(GetUnreadMessagesRequest) returns (GetUnreadMessagesResponse);
  rpc MakeMessageRead(MakeMessageReadRequest) returns (MakeMessageReadResponse);
}
